correction of mistakes on index page: change the font, add new blocks page and  content-area, center alignment of content

--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -1,22 +1,20 @@
-.c-footer {
-  background-color: var(--white);
-  border-top: 1px solid var(--grey-2);
-  padding: 96px 0;
+.footer {
+  padding: 71px 0 136px;
 }
-.c-footer__title {
+.footer__title {
+  font-family: 'Inter', sans-serif;
   font-size: 38px;
   line-height: 48px;
   font-weight: 500;
   text-align: center;
-  color: var(--black);
   margin-bottom: 32px;
 }
-.c-footer__paragraph {
+.footer__text {
+  font-family: 'Inter', sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
   text-align: center;
-  color: var(--black);
-  width: 640px;
+  max-width: 640px;
   margin: auto;
 }
